# md_editor

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.codex/environments/: environment.toml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/components/: CommandPalette.tsx  CosmicFocusOverlay.tsx  EditorPane.tsx  ExportModal.tsx  FileSidebar.tsx  HistoryModal.tsx  LinkValidationModal.tsx  PreviewPane.tsx  SlashMenu.tsx  TopBar.tsx  UserGuideModal.tsx
src/lib/: export.ts  markdown.ts  shortcuts.ts  slashCommands.ts  tableFormatter.ts
src/state/: documentStore.ts
src/styles/: app.css  tokens.css
src/types/: app.ts
tests/e2e/: app.spec.ts
tests/unit/: export.test.ts  markdown.test.ts  previewPane.test.ts  slashCommands.test.ts  store.test.ts  tableFormatter.test.ts  topbar.test.ts
