[package]
name = "md-editor"
version = "0.1.0"
description = "Simple and elegant Markdown editor"
authors = ["Pedro Aldeamas"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

[dev-dependencies]
tempfile = "3"
